[gd_scene load_steps=6 format=3 uid="uid://cn60v3e0rhgr7"]

[ext_resource type="Script" uid="uid://cv1mfrai4231e" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://c7yfbehdv1yd4" path="res://guns/gun_holder.gd" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://bt6lgjqy56hyl" path="res://guns/pistol_1.tscn" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]

[sub_resource type="LabelSettings" id="LabelSettings_1jxqw"]
font_size = 9

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("head", "cam") groups=["player"]]
script = ExtResource("1_4flbx")
head = NodePath("head")
cam = NodePath("head/cam_holder/Camera3D")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="cam_holder" type="Node3D" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/cam_holder"]

[node name="interact_cast" type="RayCast3D" parent="head/cam_holder/Camera3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)

[node name="gun_holder" type="Node3D" parent="head/cam_holder/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27574974, -0.351874, -0.79449916)
script = ExtResource("2_i3pqv")

[node name="pistol 1" parent="head/cam_holder/Camera3D/gun_holder" instance=ExtResource("2_onrkg")]

[node name="cam ani" type="AnimationPlayer" parent="head/cam_holder/Camera3D"]

[node name="root_gun_pos" type="Marker3D" parent="head/cam_holder/Camera3D"]

[node name="sight_pos" type="Marker3D" parent="head/cam_holder/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4flbx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="fps_counter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 31.0
offset_top = 21.0
offset_right = 71.0
offset_bottom = 44.0

[node name="int_indicator" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="int_label" type="Label" parent="Control/int_indicator"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "<F>"
label_settings = SubResource("LabelSettings_1jxqw")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/int_indicator"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control/int_indicator"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -3.5
offset_right = 3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="gun_follow" type="Marker3D" parent="."]
